# mcp-shield

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: checks.md
src/mcp_shield/: __init__.py
src/mcp_shield/audit/: __init__.py
src/mcp_shield/classification/: __init__.py  risk.py
src/mcp_shield/cli/: audit_cmd.py  main.py  proxy_cmd.py  test_cmd.py
src/mcp_shield/client/: __init__.py  connection.py  transport.py
src/mcp_shield/models/: __init__.py  enums.py  mcp_types.py
src/mcp_shield/proxy/: __init__.py  middleware.py  server.py
src/mcp_shield/reporting/: __init__.py  json_report.py  recommendations.py  sarif_report.py  score.py  terminal.py
src/mcp_shield/security/: __init__.py  base.py  cost_risk.py  cwe.py  dangerous_ops.py  idempotency.py  injection.py  ml_detector.py  poisoning.py  rug_pull.py  scanner.py  text_extractor.py  write_scope.py
src/mcp_shield/storage/: __init__.py  audit_db.py
src/mcp_shield/testing/: __init__.py  context.py  registry.py  result.py  runner.py
src/mcp_shield/testing/suites/: __init__.py  advisory.py  compliance.py  security.py
tests/batch/: run_batch.py
tests/e2e/: conftest.py  test_proxy_e2e.py  test_real_everything_server.py  test_real_fs_server.py  test_rugpull_e2e.py
tests/e2e/servers/: basic_server.py  rugpull_server.py
tests/unit/: test_advisory.py  test_audit_db.py  test_cli.py  test_connection.py  test_cost_risk.py  test_cwe.py  test_dangerous_ops.py  test_idempotency.py  test_injection.py  test_json_report.py  test_middleware.py  test_ml_detector.py  test_poisoning.py  test_proxy_server.py  test_recommendations.py  test_registry.py  test_result.py  test_risk_classifier.py  test_rug_pull.py  test_sarif_report.py  test_scanner.py  test_score.py  test_tools_summary.py  test_write_scope.py
